# AWSAgent

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  README.md  chat.py  main.py  pyproject.toml
.github/: dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: auto-merge.yml  changelog.yml  ci.yml  labeler.yml  lock.yml  release-drafter.yml  release.yml  remove-stale.yml  security.yml  stale.yml  welcome.yml
src/agentic_aws/: __init__.py  agent.py  cli.py  config.py  exceptions.py  logging.py  models.py  processor.py  prompts.py  tools.json
tests/: __init__.py  conftest.py  test_agent.py  test_config.py
